# collectiontools

./: .gitignore  .readthedocs.yaml  Makefile  README.md  conf.py  index.rst  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml  main.yml
collectiontools/: __init__.py
containertools/: __init__.py
src/collectiontools/: __init__.py
tests/: test_collectiontools.py  test_containertools.py
