[project]
name = "collectiontools"
version = "0.2.1"
readme = "README.md"
description = "Functions to handle `collections` efficiently."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx_book_theme",
]
