[project]
name = "collectiontools"
version = "0.2.2"
description = "Functions to handle `collections` efficiently."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Till Hoffmann"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tillahoffmann/collectiontools"
Documentation = "https://collectiontools.readthedocs.io"
Repository = "https://github.com/tillahoffmann/collectiontools"
Issues = "https://github.com/tillahoffmann/collectiontools/issues"

[dependency-groups]
dev = [
    "black",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx_book_theme",
]
